[gd_scene load_steps=8 format=3 uid="uid://c3x50sjt3lsc2"]

[ext_resource type="Script" path="res://assets/tiles/Eldersap/eldersap_tree.gd" id="1_5mrou"]
[ext_resource type="Texture2D" uid="uid://cmo0kashmav7h" path="res://assets/tiles/Eldersap/sprite sheet.png" id="2_727l8"]
[ext_resource type="Script" path="res://entity/player/RichTextLabel.gd" id="4_ovg25"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8e38u"]
radius = 71.1126

[sub_resource type="Animation" id="Animation_e0co3"]
resource_name = "idle"
length = 2.40001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_qvrhv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2jydm"]
_data = {
"RESET": SubResource("Animation_qvrhv"),
"idle": SubResource("Animation_e0co3")
}

[node name="EldersapTree" type="Node2D"]
script = ExtResource("1_5mrou")

[node name="growth_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_727l8")
hframes = 4
vframes = 6
frame = 1

[node name="pickable_area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickable_area"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_8e38u")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 17.0
offset_top = -18.4
offset_right = 57.0
offset_bottom = 21.6
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("4_ovg25")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2jydm")
}

[connection signal="timeout" from="growth_timer" to="." method="_on_growth_timer_timeout"]
[connection signal="body_entered" from="pickable_area" to="." method="_on_pickable_area_body_entered"]
[connection signal="body_exited" from="pickable_area" to="." method="_on_pickable_area_body_exited"]
